[MediaStream] User should not be prompted again after denying getDisplayMedia request https://bugs.webkit.org/show_bug.cgi?id=191227 <rdar://problem/45784512>

Reviewed by Youenn Fablet.

Source/WebKit:

* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::userMediaAccessWasDenied):
(WebKit::UserMediaPermissionRequestManagerProxy::wasRequestDenied):
(WebKit::UserMediaPermissionRequestManagerProxy::requestUserMediaPermissionForFrame):
* UIProcess/UserMediaPermissionRequestManagerProxy.h:

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/GetDisplayMedia.mm:
(-[GetDisplayMediaUIDelegate _webView:requestUserMediaAuthorizationForDevices:url:mainFrameURL:decisionHandler:]):
(TestWebKitAPI::GetDisplayMediaTest::promptForCapture):
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/206042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237784 268f45cc-cd09-0410-ab3c-d52691b4dbfc